# guac-kalman-filter-middleware

./: CMakeLists.txt  README.md  lanczos_pulseaudio_research.md
guac-kalman-filter/: CMakeLists.txt  README.md  metrics.csv  start-proxy.bat
guac-kalman-filter/conf/: kalman-proxy-detailed.conf  kalman-proxy.conf
guac-kalman-filter/docs/: kalman_filter_logging.md  proxy_usage.md
guac-kalman-filter/include/: config.h  filter.hpp  guac_c_wrapper.hpp  kalman.hpp  protocol.hpp  protocol_constants.hpp  protocol_utils.hpp  stb_image.h  stb_image_write.h
guac-kalman-filter/src/: config_parser.c  config_parser.h  continuous_frame_detection.c  filter.cpp  kalman.cpp  kalman_cuda.cu  kalman_cuda.h  kalman_cuda_impl.cpp  kalman_filter.c  kalman_filter.h  kalman_proxy.c  kalman_proxy.c.fixed  kalman_proxy.cZone.Identifier  kalman_simulator.cpp  main.cpp  protocol.cpp  protocol_utils.cpp  simple_proxy.c  video_cuda.cu  video_cuda.h  video_cuda_impl.cpp
src/: kalman_cuda.cu  kalman_proxy.c
